# sreality-scraper

./: Cargo.toml
src/: bot.rs  db.rs  main.rs  scraper.rs  telegram.rs
